<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BE6E2E2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewFirst"
        android:layout_width="338dp"
        android:layout_height="53dp"
        android:gravity="center_horizontal"
        android:text="@string/startText"
        android:textAlignment="center"
        android:textColor="@color/colorBlue"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textViewSecond"
        android:layout_width="349dp"
        android:layout_height="88dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/centerText"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFirst" />

    <Button
        android:id="@+id/changeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fields"
        android:gravity="center_horizontal"
        android:onClick="onChangeText"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingRight="15dp"
        android:paddingBottom="7dp"
        android:text="@string/changeText"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/Red"
        android:textColorHint="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSecond"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/nextActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingRight="15dp"
        android:paddingBottom="7dp"
        android:text="@string/nextActivity"
        android:textAllCaps="false"

        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeText"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/nextActivity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingRight="15dp"
        android:paddingBottom="7dp"

        android:text="@string/nextActivity3"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeText"
        app:layout_constraintVertical_bias="0.02" />

</androidx.constraintlayout.widget.ConstraintLayout>