<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5BE6E2E2"
    tools:context=".ThirdActivity">


    <EditText
        android:id="@+id/multiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/hint_multiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/write_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"

        android:paddingTop="7dp"
        android:paddingRight="15dp"
        android:paddingBottom="7dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiLine" />

    <Button
        android:id="@+id/read_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"
        android:paddingRight="15dp"
        android:paddingBottom="7dp"

        android:text="@string/output"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/write_btn" />

    <TextView
        android:id="@+id/textOutput"
        android:layout_width="215dp"
        android:layout_height="132dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/read_btn" />

    <Button
        android:id="@+id/prev_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"

        android:paddingRight="15dp"
        android:paddingBottom="7dp"
        android:text="@string/back_btn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOutput" />

    <Button
        android:id="@+id/exit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/fields"
        android:paddingLeft="15dp"
        android:paddingTop="7dp"

        android:paddingRight="15dp"
        android:paddingBottom="7dp"
        android:text="@string/exit_btn"
        android:textAllCaps="false"
        android:textColor="@color/Red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOutput" />

</androidx.constraintlayout.widget.ConstraintLayout>